--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ layout: default
                 </div>
                 <div class="slide_description_wrapper">
                     <div class="slide_description">
-                        <h2 data-animation="fadeInDown">Lessons for Children</h2>
-                        <h4 data-animation="fadeInUp">Dance Parties and Special Events</h4>
+                        <h2 data-animation="fadeInDown">Aulas para Crianças</h2>
+                        <h4 data-animation="fadeInUp">Festas de dança e Eventos especiais</h4>
                     </div>
                 </div>
             </li>
