--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ layout: default
                 </div>
                 <div class="slide_description_wrapper">
                     <div class="slide_description">
-                        <h2 data-animation="fadeInDown">Group and Private Lessons for Adults</h2>
-                        <h4 data-animation="fadeInUp">Dance Parties and Special Events</h4>
+                        <h2 data-animation="fadeInDown">Aulas particulares e em grupo para adultos</h2>
+                        <h4 data-animation="fadeInUp">Festas de dança e Eventos especiais</h4>
                     </div>
                 </div>
             </li>
@@ -38,7 +38,7 @@ layout: default
         <div class="row">
             <div class="col-sm-12">
                 <div class="description">
-                    <h2 class="text-center">Welcome to Dance Studio Center!</h2>
+                    <h2 class="text-center">Bem-vindo a Compassos Stúdio de dança!</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Proin nibh augue, suscipit a, scelerisque sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus. Phasellus pharetra nulla ac diam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Proin nibh augue, suscipit a, scelerisque sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus. Phasellus pharetra nulla ac diam.
                     </p>
                 </div>
@@ -54,7 +54,7 @@ layout: default
                         </div>
                     </a>
                 </div>
-                <h3>Order Gift Certificate</h3>
+                <h3>Garanta seu certificado</h3>
             </div>
              <div class="col-sm-4 welcome_cont">
                 <div class="welcome_desc">
@@ -65,7 +65,7 @@ layout: default
                         </div>
                     </a>
                 </div>
-                <h3>Check Schedule</h3>
+                <h3>Verifique seu cronograma</h3>
             </div>
              <div class="col-sm-4 welcome_cont">
                 <div class="welcome_desc">
@@ -76,7 +76,7 @@ layout: default
                         </div>
                     </a>
                 </div>
-                <h3>Browse Upcoming Events</h3>
+                <h3>Encontre próximos eventos</h3>
             </div>
         </div>
     </div>
@@ -87,7 +87,7 @@ layout: default
 <section class="features grey_section">
     <div class="container">
         <header class="section_header text-center">
-            <h2>core features</h2>
+            <h2>Principais recursos</h2>
         </header>
         <div class="row">
             <div class="col-sm-4 text-center">
@@ -95,7 +95,7 @@ layout: default
                     <div class="icon">
                        <i class="fa fa-user"></i>
                     </div>
-                    <h4>Lessons for Adults</h4>
+                    <h4>Aulas para adultos</h4>
                     <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 </div>
             </div>
@@ -104,7 +104,7 @@ layout: default
                     <div class="icon">
                        <i class="fa fa-child"></i>
                     </div>
-                    <h4>Lessons for Kids</h4>
+                    <h4>Aulas para crianças</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque.</p>
                 </div>
             </div>
@@ -113,7 +113,7 @@ layout: default
                     <div class="icon">
                        <i class="fa fa-heart-o"></i>
                     </div>
-                    <h4>Wedding Dance</h4>
+                    <h4>Dança de casamento</h4>
                     <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 </div>
             </div>
@@ -125,7 +125,7 @@ layout: default
 <section class="choose light_section">
     <div class="container">
         <header class="section_header text-center">
-            <h2>why Choose us?</h2>
+            <h2>Por que nos escolher?</h2>
         </header>
         <div class="row">
             <div class="col-sm-6 col-md-4 text-center">
@@ -133,7 +133,7 @@ layout: default
                     <div class="icon">
                        <i class="fa fa-flag-o"></i>
                     </div>
-                    <h4>We’re Creative</h4>
+                    <h4>Nós somos criativos</h4>
                     <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim sagittis quam, id porta quam.</p>
                 </div>
             </div>
@@ -142,7 +142,7 @@ layout: default
                     <div class="icon">
                        <i class="fa fa-clock-o"></i>
                     </div>
-                    <h4>We’re Punctual</h4>
+                    <h4>Somos pontuais</h4>
                     <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim sagittis quam, id porta quam.</p>
                 </div>
             </div>
@@ -151,7 +151,7 @@ layout: default
                     <div class="icon">
                        <i class="fa fa-magic"></i>
                     </div>
-                    <h4>We have magic</h4>
+                    <h4>Nós temos mágica</h4>
                     <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim sagittis quam, id porta quam.</p>
                 </div>
             </div>
@@ -160,7 +160,7 @@ layout: default
                     <div class="icon">
                        <i class="fa fa-heart-o"></i>
                     </div>
-                    <h4>We all do with love</h4>
+                    <h4>Amamos o que fazemos</h4>
                     <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim sagittis quam, id porta quam.</p>
                 </div>
             </div>
@@ -169,7 +169,7 @@ layout: default
                     <div class="icon">
                        <i class="fa fa-comments-o"></i>
                     </div>
-                    <h4>We're Friendly</h4>
+                    <h4>Somos amigáveis</h4>
                     <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim sagittis quam, id porta quam.</p>
                 </div>
             </div>
@@ -178,7 +178,7 @@ layout: default
                     <div class="icon">
                        <i class="fa fa-smile-o"></i>
                     </div>
-                    <h4>We're Best</h4>
+                    <h4>Nós somos os melhores</h4>
                     <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim sagittis quam, id porta quam.</p>
                 </div>
             </div>
@@ -193,7 +193,7 @@ layout: default
         <div class="row">
             <div class="col-sm-6">
                  <h2 class="section-title font-alt text-left">
-                    why Choose us?
+                    Por que nos escolher?
                 </h2>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim sagittis quam.
@@ -273,9 +273,9 @@ layout: default
     <div class="container text-center">
         <div class="row">
             <header class="section_header text-center">
-                <h2>Sign up for Great News</h2>
+                <h2>Assine para grandes novidades</h2>
             </header>
-            <p>Please, subscribe to our latest news to be updated.</p>
+            <p>Por favor, se inscreva para receber nossas últimas notícias.</p>
             <form id="signup" action="/" method="get" class="form-inline">
                 <div class="form-group">
                     <input name="email" id="mailchimp_email" type="email" class="form-control" placeholder="your@email.com">
