--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ layout: default
         <div class="row text-center">
             <div class="col-sm-4 welcome_cont">
                 <div class="welcome_desc">
-                    <a class="" href="about_us.html">
+                    <a class="" href="serviços.html">
                         <img src="example/welcome_1.jpg" alt="">
                         <div class="welcome text-center">
                             <i></i>
@@ -58,7 +58,7 @@ layout: default
             </div>
              <div class="col-sm-4 welcome_cont">
                 <div class="welcome_desc">
-                    <a class="" href="about_us.html">
+                    <a class="" href="horarios.html">
                         <img src="example/welcome_2.jpg" alt="">
                         <div class="welcome text-center">
                             <i></i>
@@ -278,9 +278,9 @@ layout: default
             <p>Por favor, se inscreva para receber nossas últimas notícias.</p>
             <form id="signup" action="/" method="get" class="form-inline">
                 <div class="form-group">
-                    <input name="email" id="mailchimp_email" type="email" class="form-control" placeholder="your@email.com">
+                    <input name="email" id="mailchimp_email" type="email" class="form-control" placeholder="seu@email.com">
                 </div>
-                <button type="submit" class="theme_button">Send</button>
+                <button type="submit" class="theme_button">Enviar</button>
                 <div id="response"></div>
             </form>
         </div>
