--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ layout: default
                     <div class="icon">
                        <i class="fa fa-heart-o"></i>
                     </div>
-                    <h4>Dança de casamento</h4>
+                    <h4>Coreografia para casamentos</h4>
                     <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 </div>
             </div>
