--- a/sobre.html
+++ b/sobre.html
@@ -8,14 +8,14 @@ layout: default
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
-                    <h1 class="hs-line">About Us</h1>
+                    <h1 class="hs-line">Sobre nós</h1>
                     <div class="hs-line-des">
-                        Awesome team of choreographers &amp;&nbsp;just good people
+                         Time de coreografos incríveis &amp;&nbsp;ótimas pessoas
                     </div>
                 </div>
                 <div class="col-md-4 mt-30">
                     <div class="mod-breadcrumbs">
-                        <a href="/">Home</a>&nbsp;/&nbsp;<a href="#">Pages</a>&nbsp;/&nbsp;<span>About Us</span>
+                        <a href="index.html">Principal</a>&nbsp;/&nbsp;<span>Sobre nós</span>
                     </div>
 
                 </div>
@@ -30,7 +30,7 @@ layout: default
         <div class="row">
             <div class="col-sm-12">
                 <div class="description">
-                    <h2 class="text-center">Welcome to Dance Studio Center!</h2>
+                    <h2 class="text-center">Bem-vindo a Compassos Stúdio de dança!</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Proin nibh augue, suscipit a, scelerisque sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus. Phasellus pharetra nulla ac diam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Proin nibh augue, suscipit a, scelerisque sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus. Phasellus pharetra nulla ac diam.
                     </p>
                 </div>
@@ -46,7 +46,7 @@ layout: default
                         </div>
                     </a>
                 </div>
-                <h3>Order Gift Certificate</h3>
+                <h3>Garanta seu certificado</h3>
             </div>
              <div class="col-sm-4 welcome_cont">
                 <div class="welcome_desc">
@@ -57,7 +57,7 @@ layout: default
                         </div>
                     </a>
                 </div>
-                <h3>Check Schedule</h3>
+                <h3>Verifique seu cronograma</h3>
             </div>
              <div class="col-sm-4 welcome_cont">
                 <div class="welcome_desc">
@@ -68,7 +68,7 @@ layout: default
                         </div>
                     </a>
                 </div>
-                <h3>Browse Upcoming Events</h3>
+                <h3>Encontre próximos eventos</h3>
             </div>
         </div>
     </div>
@@ -77,7 +77,7 @@ layout: default
 <section id="testimonials" class="dark_section parallax">
     <div class="container">
         <header class="section_header text-center">
-            <h2>What people say?:</h2>
+            <h2>O que as pessoas dizem?:</h2>
         </header>
         <div class="row">
             <div class="col-sm-10 col-sm-offset-1 ">
@@ -130,29 +130,29 @@ layout: default
     <div class="container">
         <div class="row">
             <h2 class="section-title text-left">
-                About Studio
+                Sobre o Studio
             </h2>
         </div>
         <div class="row">
              <div class="col-md-4 col-sm-12">
                 <div class="progress">
                     <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                        <span>Adults, 80%</span>
+                        <span>Adutos, 80%</span>
                     </div>
                 </div>
                 <div class="progress">
                     <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 95%">
-                        <span>Kids, 95%</span>
+                        <span>Crianças, 95%</span>
                     </div>
                 </div>
                 <div class="progress">
                     <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 92%">
-                        <span>Private Lessons, 92%</span>
+                        <span>Aulas particulares, 92%</span>
                     </div>
                 </div>
                 <div class="progress">
                     <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 86%">
-                        <span>Wedding Dance, 86%</span>
+                        <span>Coroegrafias de casamento, 86%</span>
                     </div>
                 </div>
             </div>
@@ -169,7 +169,7 @@ layout: default
    <section id="team" class="grey_section">
         <div class="container">
             <header class="section_header text-center">
-                <h2>creative team</h2>
+                <h2>Time criativo</h2>
             </header>
             <div class="row to_animate_child_blocks">
                 <div class="block col-sm-6 col-md-3 text-left to_animate" data-animation="fadeInUp">
@@ -177,7 +177,7 @@ layout: default
                         <img src="example/team/01.jpg" alt="team">
                         <div class="caption">
                             <h4>Karl Lawson</h4>
-                            <p class="color">Founder and CEO</p>
+                            <p class="color">Fundador e CEO</p>
                             <p>Mauris vel neque sit amet nunc gravida congue sed sit amet purus. Quisque lacus quam, egestas ac tincidunt.Mauris vel neque sit amet nunc gravida congue sed sit amet purus. Quisque lacus quam, egestas ac tincidunt.</p>
                         </div>
 
@@ -187,8 +187,8 @@ layout: default
                     <div class="team_desc">
                         <img src="example/team/02.jpg" alt="team">
                         <div class="caption">
-                            <h4>Glen Marsh</h4>
-                            <p class="color">Dance Instructor</p>
+                            <h4>Lara Marsh</h4>
+                            <p class="color">Instrutora de dança</p>
                             <p>Mauris vel neque sit amet nunc gravida congue sed sit amet purus. Quisque lacus quam, egestas ac tincidunt.Mauris vel neque sit amet nunc gravida congue sed sit amet purus. Quisque lacus quam, egestas ac tincidunt.</p>
                         </div>
 
@@ -198,8 +198,8 @@ layout: default
                     <div class="team_desc">
                         <img src="example/team/03.jpg" alt="team">
                         <div class="caption">
-                            <h4>Lara Doe</h4>
-                            <p class="color">Dance Instructor</p>
+                            <h4>Giovan Doe</h4>
+                            <p class="color">Instrutor de dança</p>
                             <p>Mauris vel neque sit amet nunc gravida congue sed sit amet purus. Quisque lacus quam, egestas ac tincidunt.Mauris vel neque sit amet nunc gravida congue sed sit amet purus. Quisque lacus quam, egestas ac tincidunt.</p>
                         </div>
 
@@ -209,8 +209,8 @@ layout: default
                     <div class="team_desc">
                         <img src="example/team/04.jpg" alt="team">
                         <div class="caption">
-                            <h4>Marta Lee</h4>
-                            <p class="color">Dance Instructor</p>
+                            <h4>Cristovão Lee</h4>
+                            <p class="color">Instrutor de dança</p>
                             <p>Mauris vel neque sit amet nunc gravida congue sed sit amet purus. Quisque lacus quam, egestas ac tincidunt.Mauris vel neque sit amet nunc gravida congue sed sit amet purus. Quisque lacus quam, egestas ac tincidunt.</p>
                         </div>
 
@@ -223,7 +223,7 @@ layout: default
      <section class="light_section">
         <div class="container">
             <header class="section_header text-center">
-                <h2> our partners</h2>
+                <h2> Nossos parceiros</h2>
             </header>
             <div class="row">
                 <div class="col-sm-12">
@@ -279,7 +279,7 @@ layout: default
 <section class="fan_facts grey_section">
     <div class="container">
         <header class="section_header text-center">
-            <h2>fun facts</h2>
+            <h2>Fatos interessantes</h2>
         </header>
         <div class="row">
             <div class="col-sm-6 col-md-3">
@@ -289,7 +289,7 @@ layout: default
                     </div>
                     <div class="teaser_description">
                         <p class="counter" data-from="0" data-to="568" data-speed="1800"></p>
-                        <h3>happy client</h3>
+                        <h3>clientes satisfeitos</h3>
                     </div>
                 </div>
             </div>
@@ -300,7 +300,7 @@ layout: default
                     </div>
                     <div class="teaser_description">
                         <p class="counter" data-from="0" data-to="68" data-speed="1800"></p>
-                        <h3>award won</h3>
+                        <h3>premios conquistados</h3>
                     </div>
                 </div>
             </div>
@@ -311,7 +311,7 @@ layout: default
                     </div>
                     <div class="teaser_description">
                         <p class="counter" data-from="0" data-to="136" data-speed="1800"></p>
-                        <h3>new people</h3>
+                        <h3>novatos</h3>
                     </div>
                 </div>
             </div>
@@ -322,7 +322,7 @@ layout: default
                     </div>
                     <div class="teaser_description">
                         <p class="counter" data-from="0" data-to="264" data-speed="1800"></p>
-                        <h3>newsletter review</h3>
+                        <h3>boletim de notícias</h3>
                     </div>
                 </div>
             </div>
