--- a/serviços.html
+++ b/serviços.html
@@ -7,7 +7,7 @@ layout: default
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
-                    <h1 class="hs-line">Sobre nós</h1>
+                    <h1 class="hs-line">Serviços</h1>
                     <div class="hs-line-des">
                          Time de coreografos incríveis &amp;&nbsp;ótimas pessoas
                     </div>
