translate single-class

--- a/aulas-particulares.html
+++ b/aulas-particulares.html
@@ -5,28 +5,29 @@ layout: default
 
 
 <section class="banner">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8">
-                <h1 class="hs-line">Single Class</h1>
-                <div class="hs-line-des">
-                    Awesome team of choreographers &amp;&nbsp;just good people
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8">
+                    <h1 class="hs-line">Aulas particulares</h1>
+                    <div class="hs-line-des">
+                         Time de coreografos incríveis &amp;&nbsp;ótimas pessoas
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-4 mt-30">
-                <div class="mod-breadcrumbs">
-                    <a href="/">Home</a>&nbsp;/&nbsp;<a href="#">Pages</a>&nbsp;/&nbsp;<span>Single Class</span>
+                <div class="col-md-4 mt-30">
+                    <div class="mod-breadcrumbs">
+                        <a href="index.html">Principal</a>&nbsp;/&nbsp;<span>Aulas particulares</span>
+                    </div>
+
                 </div>
             </div>
         </div>
-    </div>
 </section>
 
     <section class="light_section">
         <div class="container">
             <div class="row">
                 <header class="section_header text-center">
-                    <h2>single class</h2>
+                    <h2>Aula particular</h2>
                 </header>
             </div>
             <div class="row">
@@ -41,7 +42,7 @@ layout: default
                             <div class="classes-description">
                                 <p>Stet clita kasd gubergren, no sea takimata sanctus est lorem ipsum dolor sit amet.</p>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, voluptates, nemo, quaerat culpa sunt quibusdam vitae doloremque molestias voluptatum id mollitia quas aliquid eum eius reiciendis aut illo repellendus ipsa.</p>
-                                <p class="with-icon date">February 12, 2015</p>
+                                <p class="with-icon date">Junho 20, 2017</p>
                                 <p class="with-icon time">11:30 - 13:30</p>
                                 <p class="with-icon person"><a href="#">Glen Marsh</a></p>
                             </div>
@@ -54,7 +55,7 @@ layout: default
     <section id="testimonials" class="dark_section parallax">
     <div class="container">
         <header class="section_header text-center">
-            <h2>What people say?:</h2>
+            <h2>O que as pessoas dizem:</h2>
         </header>
         <div class="row">
             <div class="col-sm-10 col-sm-offset-1 ">
@@ -105,7 +106,7 @@ layout: default
      <section class="light_section">
         <div class="container">
             <header class="section_header text-center">
-                <h2> our partners</h2>
+                <h2> nossos parceiros</h2>
             </header>
             <div class="row">
                 <div class="col-sm-12">
