--- a/serviços.html
+++ b/serviços.html
@@ -501,7 +501,7 @@ layout: default
    <section class="light_section">
         <div class="container">
             <header class="section_header text-center">
-                <h2> Nossos parceiros</h2>
+                <h2> nossos parceiros</h2>
             </header>
             <div class="row">
                 <div class="col-sm-12">
