--- a/horarios.html
+++ b/horarios.html
@@ -5,34 +5,35 @@ layout: default
 
 
 <section class="banner">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8">
-                <h1 class="hs-line">Timetable</h1>
-                <div class="hs-line-des">
-                    Awesome team of choreographers &amp;&nbsp;just good people
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8">
+                    <h1 class="hs-line">Horários</h1>
+                    <div class="hs-line-des">
+                         Time de coreografos incríveis &amp;&nbsp;ótimas pessoas
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-4 mt-30">
-                <div class="mod-breadcrumbs">
-                    <a href="/">Home</a>&nbsp;/&nbsp;<a href="#">Pages</a>&nbsp;/&nbsp;<span>Timetable</span>
+                <div class="col-md-4 mt-30">
+                    <div class="mod-breadcrumbs">
+                        <a href="index.html">Principal</a>&nbsp;/&nbsp;<span>Horários</span>
+                    </div>
+
                 </div>
             </div>
         </div>
-    </div>
 </section>
 
     <section id="middle" class="light_section last_content_section">
         <div class="container">
             <div class="row">
                  <header class="section_header text-center">
-                    <h2>classes timetable</h2>
+                    <h2>Horários de aula</h2>
                 </header>
             </div>
             <div class="row">
                 <div class="text-center filters col-sm-12">
                     <ul id="timetable_filter">
-                        <li><a class="selected" data-filter="all" href="#">All</a></li>
+                        <li><a class="selected" data-filter="all" href="#">Todas</a></li>
                         <li><a data-filter=".Ballet" href="#" class="">Ballet</a></li>
                         <li><a data-filter=".Hip-Hop" href="#" class="">Hip-Hop</a></li>
                         <li><a data-filter=".Jazz" href="#" class="">Jazz</a></li>
@@ -48,13 +49,13 @@ layout: default
                             <thead>
                                 <tr>
                                     <th></th>
-                                    <th>Monday</th>
-                                    <th>Tuesday</th>
-                                    <th>Wednesday</th>
-                                    <th>Thursday</th>
-                                    <th>Friday</th>
-                                    <th>Saturday</th>
-                                    <th>Sunday</th>
+                                    <th>Segunda</th>
+                                    <th>Terça</th>
+                                    <th>Quarta</th>
+                                    <th>Quinta</th>
+                                    <th>Sexta</th>
+                                    <th>Sábado</th>
+                                    <th>Domingo</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -514,7 +515,7 @@ layout: default
  <section id="testimonials" class="dark_section parallax">
     <div class="container">
         <header class="section_header text-center">
-            <h2>What people say?:</h2>
+            <h2>O que as pessoas dizem?:</h2>
         </header>
         <div class="row">
             <div class="col-sm-10 col-sm-offset-1 ">
@@ -565,7 +566,7 @@ layout: default
      <section class="light_section">
         <div class="container">
             <header class="section_header text-center">
-                <h2> our partners</h2>
+                <h2> nossoas parceiros</h2>
             </header>
             <div class="row">
                 <div class="col-sm-12">
