--- a/sobre.html
+++ b/sobre.html
@@ -21,7 +21,7 @@ layout: default
                 </div>
             </div>
         </div>
-    </section>
+</section>
 
 
 
@@ -77,7 +77,7 @@ layout: default
 <section id="testimonials" class="dark_section parallax">
     <div class="container">
         <header class="section_header text-center">
-            <h2>O que as pessoas dizem:</h2>
+            <h2>O que as pessoas dizem?:</h2>
         </header>
         <div class="row">
             <div class="col-sm-10 col-sm-offset-1 ">
