--- a/galeria.html
+++ b/galeria.html
@@ -6,20 +6,20 @@ layout: default
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
-                    <h1 class="hs-line">Gallery</h1>
+                    <h1 class="hs-line">Galeria</h1>
                     <div class="hs-line-des">
-                        Awesome team of choreographers &amp;&nbsp;just good people
+                         Time de coreografos incríveis &amp;&nbsp;ótimas pessoas
                     </div>
                 </div>
                 <div class="col-md-4 mt-30">
                     <div class="mod-breadcrumbs">
-                        <a href="/">Home</a>&nbsp;/&nbsp;<a href="#">Pages</a>&nbsp;/&nbsp;<span>Gallery</span>
+                        <a href="index.html">Principal</a>&nbsp;/&nbsp;<span>Galeria</span>
                     </div>
 
                 </div>
             </div>
         </div>
-    </section>
+</section>
 
 
 
@@ -28,15 +28,15 @@ layout: default
             <div class="row">
                 <div class="col-sm-12">
                     <header class="section_header text-center">
-                        <h2>our portfolio</h2>
+                        <h2>nosso portfolio</h2>
                     </header>
                     <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit perspiciatis, cupiditate impedit autem dicta harum sint corporis nemo fugit consectetur optio similique ad quod, voluptas earum, omnis veniam amet incidunt!</p>
 
                     <div id="isotope_filters">
-                        <a href="#" data-filter="*" class="selected">Show All</a>
-                        <a href="#" data-filter=".kids">Kids</a>
-                        <a href="#" data-filter=".professional">Professional</a>
-                        <a href="#" data-filter=".wedding">Wedding</a>
+                        <a href="#" data-filter="*" class="selected">Mostrar tudo</a>
+                        <a href="#" data-filter=".kids">Crianças</a>
+                        <a href="#" data-filter=".professional">Profissional</a>
+                        <a href="#" data-filter=".wedding">Casamento</a>
                     </div>
 
                     <div id="isotope_container" class="isotope row masonry-layout">
