--- a/contato.html
+++ b/contato.html
@@ -6,19 +6,20 @@ layout: default
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
-                    <h1 class="hs-line">Contact</h1>
+                    <h1 class="hs-line">Contato</h1>
                     <div class="hs-line-des">
-                        Awesome team of choreographers &amp;&nbsp;just good people
+                         Time de coreografos incríveis &amp;&nbsp;ótimas pessoas
                     </div>
                 </div>
                 <div class="col-md-4 mt-30">
                     <div class="mod-breadcrumbs">
-                        <a href="/">Home</a>&nbsp;/&nbsp;<a href="#">Pages</a>&nbsp;/&nbsp;<span>Contact</span>
+                        <a href="index.html">Principal</a>&nbsp;/&nbsp;<span>Contato</span>
                     </div>
+
                 </div>
             </div>
         </div>
-    </section>
+</section>
 
 
 <section id="contact" class="grey_section">
@@ -28,11 +29,11 @@ layout: default
 
             <div class="widget widget_contact col-sm-6 to_animate">
                 <header class="section_header">
-                    <h2>contact info</h2>
+                    <h2>Informações de contato</h2>
                 </header>
                 <p>Suspendisse pulvinar, augue ac venenatis condimentum, sem libero volutpat nibh, nec pellentesque velit pede quis nunc. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. In ac felis quis tortor malesuada pretium. In hac habitasse platea dictumst curabitur nisi hac habitasse platea dictumst maecenas nec odio et ante tincidunt tempus morbi ac felis.
                 <br><br>
-                    <strong>Phone:</strong> +12 345 678 9123
+                    <strong>Telefone:</strong> +12 345 678 9123
                 </p>
                 <p>
                     <strong>Email:</strong> <a href="mailto:info@company.com">info@company.com</a>
@@ -41,7 +42,7 @@ layout: default
                     <strong>Website: </strong><a href="./">www.company.com</a>
                 </p>
                 <p>
-                    <strong>Address:</strong> 4321 Your Address, Country
+                    <strong>Endereço:</strong> 4321 Your Address, Country
                 </p>
                  <div class="social-mid">
                     <a href="#"><i class="fa fa-facebook"></i></a>
@@ -56,28 +57,28 @@ layout: default
 
             <div class="widget col-sm-6 to_animate">
                 <header class="section_header">
-                    <h2>contact form</h2>
+                    <h2>Formulário de contato</h2>
                 </header>
                 <form class="contact-form" method="post" action="/">
                     <p class="contact-form-name">
-                        <label for="name">Name <span class="required">*</span></label>
-                        <input type="text" aria-required="true" size="30" value="" name="name" id="name" class="form-control" placeholder="Name">
+                        <label for="name">Nome <span class="required">*</span></label>
+                        <input type="text" aria-required="true" size="30" value="" name="name" id="name" class="form-control" placeholder="Nome">
                     </p>
                     <p class="contact-form-email">
                         <label for="email">Email <span class="required">*</span></label>
                         <input type="email" aria-required="true" size="30" value="" name="email" id="email" class="form-control" placeholder="Email">
                     </p>
                     <p class="contact-form-subject">
-                        <label for="subject">Subject <span class="required">*</span></label>
-                        <input type="text" aria-required="true" size="30" value="" name="subject" id="subject" class="form-control" placeholder="Subject">
+                        <label for="subject">Assunto <span class="required">*</span></label>
+                        <input type="text" aria-required="true" size="30" value="" name="subject" id="subject" class="form-control" placeholder="Assunto">
                     </p>
                     <p class="contact-form-message">
-                        <label for="message">Message</label>
-                        <textarea aria-required="true" rows="8" cols="45" name="message" id="message" class="form-control" placeholder="Message"></textarea>
+                        <label for="message">Mensagem</label>
+                        <textarea aria-required="true" rows="8" cols="45" name="message" id="message" class="form-control" placeholder="Mensagem"></textarea>
                     </p>
                     <p class="contact-form-submit vertical-margin-40">
                         <!-- <input type="submit" value="Send" id="contact_form_submit" name="contact_submit" class="theme_button"> -->
-                        <button type="submit" id="contact_form_submit" name="contact_submit" class="theme_button">Submit</button>
+                        <button type="submit" id="contact_form_submit" name="contact_submit" class="theme_button">Enviar</button>
                     </p>
                 </form>
             </div>
