liquid template add site title

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ layout: default
         <div class="row">
             <div class="col-sm-12">
                 <div class="description">
-                    <h2 class="text-center">Bem-vindo a Compassos Stúdio de dança!</h2>
+                    <h2 class="text-center">Bem-vindo a {{ site.title }}!</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Proin nibh augue, suscipit a, scelerisque sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus. Phasellus pharetra nulla ac diam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Proin nibh augue, suscipit a, scelerisque sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus. Phasellus pharetra nulla ac diam.
                     </p>
                 </div>
