change subscribe session to 'venha nos conhecer'

--- a/index.html
+++ b/index.html
@@ -273,16 +273,8 @@ layout: default
     <div class="container text-center">
         <div class="row">
             <header class="section_header text-center">
-                <h2>Assine para grandes novidades</h2>
+              <a href="contato.html"><h2>Venha nos visitar para ter a sua melhor experiência de dança</h2></a>
             </header>
-            <p>Por favor, se inscreva para receber nossas últimas notícias.</p>
-            <form id="signup" action="/" method="get" class="form-inline">
-                <div class="form-group">
-                    <input name="email" id="mailchimp_email" type="email" class="form-control" placeholder="seu@email.com">
-                </div>
-                <button type="submit" class="theme_button">Enviar</button>
-                <div id="response"></div>
-            </form>
         </div>
     </div>
 </section>
