--- a/horarios.html
+++ b/horarios.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 
-
+<span id="highlight_page_id" class="hidden">4</span>
 <section class="banner">
         <div class="container">
             <div class="row">
