--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<span id="highlight_page_id" class="hidden">0</span>
 <section id="mainslider">
 
     <div class="flexslider">
