--- a/serviços.html
+++ b/serviços.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-
+<span id="highlight_page_id" class="hidden">2</span>
 <section class="banner">
         <div class="container">
             <div class="row">
