--- a/aulas-particulares.html
+++ b/aulas-particulares.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-
+<span id="highlight_page_id" class="hidden">3</span>
 
 <section class="banner">
         <div class="container">
