--- a/equipe.html
+++ b/equipe.html
@@ -8,14 +8,14 @@ layout: default
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
-                    <h1 class="hs-line">Aulas particulares</h1>
+                    <h1 class="hs-line">Equipe</h1>
                     <div class="hs-line-des">
                          Time de coreografos incríveis &amp;&nbsp;ótimas pessoas
                     </div>
                 </div>
                 <div class="col-md-4 mt-30">
                     <div class="mod-breadcrumbs">
-                        <a href="index.html">Principal</a>&nbsp;/&nbsp;<span>Aulas particulares</span>
+                        <a href="index.html">Principal</a>&nbsp;/&nbsp;<span>Equipe</span>
                     </div>
 
                 </div>
