--- a/contato.html
+++ b/contato.html
@@ -33,16 +33,16 @@ layout: default
                 </header>
                 <p>Suspendisse pulvinar, augue ac venenatis condimentum, sem libero volutpat nibh, nec pellentesque velit pede quis nunc. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. In ac felis quis tortor malesuada pretium. In hac habitasse platea dictumst curabitur nisi hac habitasse platea dictumst maecenas nec odio et ante tincidunt tempus morbi ac felis.
                 <br><br>
-                    <strong>Telefone:</strong> +12 345 678 9123
+                    <strong>Telefone:</strong> (62) 3286 -7624
                 </p>
                 <p>
-                    <strong>Email:</strong> <a href="mailto:info@company.com">info@company.com</a>
+                    <strong>Email:</strong> <a href="studiocompassos@gmail.com">studiocompassos@gmail.com</a>
                 </p>
                 <p>
                     <strong>Website: </strong><a href="./">www.company.com</a>
                 </p>
                 <p>
-                    <strong>Endereço:</strong> 4321 Your Address, Country
+                    <strong>Endereço:</strong> Rua C-116, Quadra 220 lote 1 número 569, Setor Jardim américa, Goiânia, Goiás.
                 </p>
                  <div class="social-mid">
                     <a href="#"><i class="fa fa-facebook"></i></a>
