--- a/equipe.html
+++ b/equipe.html
@@ -34,7 +34,7 @@ layout: default
                 <div class="col-sm-12">
                     <div class="classes media class_desc">
                         <a href="#" class="pull-left">
-                            <img src="example/team/02.jpg" alt="image01" class="media-object">
+                            <img src="img/team/ary_demosthenes_2.jpg" alt="image01" class="media-object">
                         </a>
 
                         <div class="media-body">
@@ -59,7 +59,7 @@ layout: default
                 <div class="col-sm-12">
                     <div class="classes media class_desc">
                         <a href="#" class="pull-left">
-                            <img src="example/team/02.jpg" alt="image01" class="media-object">
+                            <img src="img/team/Giovanna_Leoni_2.jpg" alt="image01" class="media-object">
                         </a>
 
                         <div class="media-body">
@@ -81,7 +81,7 @@ layout: default
                 <div class="col-sm-12">
                     <div class="classes media class_desc">
                         <a href="#" class="pull-left">
-                            <img src="example/team/02.jpg" alt="image01" class="media-object">
+                            <img src="img/team/Leandro_Matos_2.jpg" alt="image01" class="media-object">
                         </a>
 
                         <div class="media-body">
@@ -102,7 +102,7 @@ layout: default
                 <div class="col-sm-12">
                     <div class="classes media class_desc">
                         <a href="#" class="pull-left">
-                            <img src="example/team/02.jpg" alt="image01" class="media-object">
+                            <img src="img/team/Mariana_Rabelo_2.jpg" alt="image01" class="media-object">
                         </a>
 
                         <div class="media-body">
@@ -123,7 +123,7 @@ layout: default
                 <div class="col-sm-12">
                     <div class="classes media class_desc">
                         <a href="#" class="pull-left">
-                            <img src="example/team/02.jpg" alt="image01" class="media-object">
+                            <img src="img/team/Rafael_Rabelo_2.jpg" alt="image01" class="media-object">
                         </a>
 
                         <div class="media-body">
@@ -143,7 +143,7 @@ layout: default
                 <div class="col-sm-12">
                     <div class="classes media class_desc">
                         <a href="#" class="pull-left">
-                            <img src="example/team/02.jpg" alt="image01" class="media-object">
+                            <img src="img/team/Renata_Ferreira_2.jpg" alt="image01" class="media-object">
                         </a>
 
                         <div class="media-body">
@@ -163,7 +163,7 @@ layout: default
                 <div class="col-sm-12">
                     <div class="classes media class_desc">
                         <a href="#" class="pull-left">
-                            <img src="example/team/02.jpg" alt="image01" class="media-object">
+                            <img src="img/team/Thaynara_Santiago_2.jpg" alt="image01" class="media-object">
                         </a>
 
                         <div class="media-body">
