remove galley hover

--- a/galeria.html
+++ b/galeria.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<span id="highlight_page_id" class="hidden">4</span>
+<span id="highlight_page_id" class="hidden">5</span>
 <section class="banner">
         <div class="container">
             <div class="row">
@@ -44,9 +44,8 @@ layout: default
 
                                 <img src="example/gallery/01.jpg" alt="">
 
-                            <div class="gallery-item-description">
-                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/01.jpg">Lorem Ipsum Dolor</a></h3>
-                                <p>Dolore voluptates, repellat alias reprehenderit. Quisquam aperiam officia commodi unde accusantium cum laudantium optio, assumenda voluptas?</p>
+                            <div>
+                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/01.jpg"></a></h3>
 
                             </div>
                         </div>
@@ -55,9 +54,9 @@ layout: default
 
                                 <img src="example/gallery/02.jpg" alt="">
 
-                            <div class="gallery-item-description">
-                                <h3> <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/02.jpg">Lorem Ipsum Dolor</a></h3>
-                                <p>Dumquam placeat quisquam deleniti debitis provident qui sit cupiditate beatae dolorum. Minus esse praesentium, debitis excepturi.</p>
+                            <div>
+                                <h3> <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/02.jpg"></a></h3>
+
 
                             </div>
                         </div>
@@ -66,9 +65,9 @@ layout: default
 
                                 <img src="example/gallery/03.jpg" alt="">
 
-                            <div class="gallery-item-description">
-                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/03.jpg">Lorem Ipsum Dolor</a></h3>
-                                <p>Dd quod error est aliquam vel a ipsa, vitae, corrupti reiciendis voluptatem ducimus praesentium inventore?</p>
+                            <div>
+                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/03.jpg"></a></h3>
+
 
                             </div>
                         </div>
@@ -77,9 +76,9 @@ layout: default
 
                                 <img src="example/gallery/04.jpg" alt="">
 
-                            <div class="gallery-item-description">
-                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/04.jpg">Lorem Ipsum Dolor</a></h3>
-                                <p>Dacere temporibus error consectetur ducimus odio, perferendis in quo vel odit praesentium officia iure nisi!</p>
+                            <div>
+                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/04.jpg"></a></h3>
+
 
                             </div>
                         </div>
@@ -88,9 +87,9 @@ layout: default
 
                                 <img src="example/gallery/05.jpg" alt="">
 
-                            <div class="gallery-item-description">
-                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/05.jpg">Lorem Ipsum Dolor</a></h3>
-                                <p>Dlaborum soluta dolores ipsum tempore eaque cumque pariatur corporis illo quia architecto nisi, magnam.</p>
+                            <div>
+                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/05.jpg"></a></h3>
+
 
                             </div>
                         </div>
@@ -99,9 +98,9 @@ layout: default
 
                                 <img src="example/gallery/06.jpg" alt="">
 
-                            <div class="gallery-item-description">
-                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/06.jpg">Lorem Ipsum Dolor</a></h3>
-                                <p>Dnemo praesentium modi quidem iusto, culpa consequuntur veniam, voluptate sunt est assumenda dolorem sint ex!</p>
+                            <div>
+                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/06.jpg"></a></h3>
+
 
                             </div>
                         </div>
@@ -110,9 +109,9 @@ layout: default
 
                                 <img src="example/gallery/07.jpg" alt="">
 
-                            <div class="gallery-item-description">
-                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/07.jpg">Lorem Ipsum Dolor</a></h3>
-                                <p>Dnim pariatur sequi ex et velit eaque ducimus placeat eligendi. Facere animi quos explicabo totam veniam.</p>
+                            <div>
+                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/07.jpg"></a></h3>
+
 
                             </div>
                         </div>
@@ -121,9 +120,9 @@ layout: default
 
                                 <img src="example/gallery/08.jpg" alt="">
 
-                            <div class="gallery-item-description">
-                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/08.jpg">Lorem Ipsum Dolor</a></h3>
-                                <p>Daut ab vitae doloribus voluptates necessitatibus beatae, quibusdam autem perferendis repellendus inventore earum quaerat accusamus.</p>
+                            <div>
+                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/08.jpg"></a></h3>
+
 
                             </div>
                         </div>
@@ -132,9 +131,9 @@ layout: default
 
                                 <img src="example/gallery/09.jpg" alt="">
 
-                            <div class="gallery-item-description">
-                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/09.jpg">Lorem Ipsum Dolor</a></h3>
-                                <p>Daut ab vitae doloribus voluptates necessitatibus beatae, quibusdam autem perferendis repellendus inventore earum quaerat accusamus.</p>
+                            <div>
+                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/09.jpg"></a></h3>
+
 
                             </div>
                         </div>
@@ -142,9 +141,9 @@ layout: default
 
                                 <img src="example/gallery/10.jpg" alt="">
 
-                            <div class="gallery-item-description">
-                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/10.jpg">Lorem Ipsum Dolor</a></h3>
-                                <p>Daut ab vitae doloribus voluptates necessitatibus beatae, quibusdam autem perferendis repellendus inventore earum quaerat accusamus.</p>
+                            <div>
+                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/10.jpg"></a></h3>
+
 
                             </div>
                         </div>
@@ -152,9 +151,9 @@ layout: default
 
                                 <img src="example/gallery/11.jpg" alt="">
 
-                            <div class="gallery-item-description">
-                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/11.jpg">Lorem Ipsum Dolor</a></h3>
-                                <p>Daut ab vitae doloribus voluptates necessitatibus beatae, quibusdam autem perferendis repellendus inventore earum quaerat accusamus.</p>
+                            <div>
+                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/11.jpg"></a></h3>
+
 
                             </div>
                         </div>
@@ -162,9 +161,9 @@ layout: default
 
                                 <img src="example/gallery/12.jpg" alt="">
 
-                            <div class="gallery-item-description">
-                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/12.jpg">Lorem Ipsum Dolor</a></h3>
-                                <p>Daut ab vitae doloribus voluptates necessitatibus beatae, quibusdam autem perferendis repellendus inventore earum quaerat accusamus.</p>
+                            <div>
+                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/12.jpg"></a></h3>
+
 
                             </div>
                         </div>
